# python-project-lvl1

./: README.md  makefile  pyproject.toml
.github/: linter-check.yml
.github/workflows/: hexlet-check.yml  linter-check.yml
brain_games/: cli.py  engine.py
brain_games/engine/: engine.py
brain_games/games/: brain_calc.py  brain_calc_eng.py  brain_even.py  brain_even_eng.py  brain_gcd_eng.py  brain_prime_eng.py  brain_progression_eng.py  calc.py  even.py  functions.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
